--- a/templates/lists.jinja
+++ b/templates/lists.jinja
@@ -3,13 +3,12 @@
 {% block title %}Lists{% endblock %}
 {% block content %}
     <p>
-        <a href='/lists' class="btn btn-primary" type="button">Profile</a>
-        <a href='#' class="btn btn-success" type="button">New List</a>
+        <a href='lists/new' class="btn btn-success" type="button">New List</a>
     </p>
     <p><ul class="list-group">
         {% for list in lists %}
             <li class="list-group-item">
-                <a href='#' type="button" class="btn btn-danger">X</a>
+                <a href='/lists/{{list[0]}}' type="button" class="btn btn-danger">X</a>
                 <a href='/lists/{{list[0]}}/items'><strong>{{list[1]['name']}}</strong></a>
                 <span class="badge">{{list[1]['items']|length}}</span>
             </li>
