--- a/templates/layout.jinja
+++ b/templates/layout.jinja
@@ -4,8 +4,13 @@
 <link rel=stylesheet media=screen href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
 <link rel=stylesheet media=screen href="{{ url_for('static', filename='css/slist.css') }}">
 <div class=container>
-{% block content %}
-{% endblock %}
+    <p></p>
+    <div class="row">
+        <div class="col-lg-6">
+            {% block content %}
+            {% endblock %}
+        </div>
+    </div>
 </div>
 
 <script src="{{ url_for('static', filename='js/jquery-2.0.3.min.js') }}"></script>
